--- a/pangu-dependencies/pom.xml
+++ b/pangu-dependencies/pom.xml
@@ -40,7 +40,7 @@
         <dubbo-registry-nacos.version>2.7.4.1</dubbo-registry-nacos.version>
         <nacos-config-spring-boot-starter.version>0.2.8</nacos-config-spring-boot-starter.version>
         <nacos-config-spring-boot-actuator.version>0.2.8</nacos-config-spring-boot-actuator.version>
-        <mybatis-plus.version>3.5.2</mybatis-plus.version>
+        <mybatis-plus.version>3.5.4</mybatis-plus.version>
         <lock4j.version>2.2.1</lock4j.version>
         <shenyu.version>2.4.1</shenyu.version>
         <seata.version>1.4.2</seata.version>
@@ -139,6 +139,12 @@
                 <groupId>com.baomidou</groupId>
                 <artifactId>mybatis-plus-boot-starter</artifactId>
                 <version>${mybatis-plus.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.baomidou</groupId>
+                <artifactId>mybatis-plus-extension</artifactId>
+                <version>${mybatis-plus.version}</version>
+                <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>com.baomidou</groupId>
