对SpringBoot2.7以下和2.7+版本AutoConfiguration 功能的兼容性支持。

--- a/pangu-examples/pangu-examples-empty-web/pom.xml
+++ b/pangu-examples/pangu-examples-empty-web/pom.xml
@@ -47,6 +47,20 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.gitee.pulanos.pangu</groupId>
+            <artifactId>pangu-spring-boot-starter</artifactId>
+            <version>6.0</version>
+        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.alibaba.boot</groupId>-->
+<!--            <artifactId>nacos-config-spring-boot-starter</artifactId>-->
+<!--        </dependency>-->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
