--- a/pangu-examples/pangu-examples-log-dynamic/pom.xml
+++ b/pangu-examples/pangu-examples-log-dynamic/pom.xml
@@ -37,6 +37,7 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <maven.compiler.target>1.8</maven.compiler.target>
         <maven.compiler.source>1.8</maven.compiler.source>
+        <pangu.version>6.0</pangu.version>
     </properties>
 
     <dependencyManagement>
@@ -44,14 +45,14 @@
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-dependencies</artifactId>
-                <version>2.7.17</version>
+                <version>${project.parent.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
             <dependency>
                 <groupId>com.gitee.pulanos.pangu</groupId>
                 <artifactId>pangu-dependencies</artifactId>
-                <version>6.0</version>
+                <version>${pangu.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -62,7 +63,6 @@
         <dependency>
             <groupId>com.gitee.pulanos.pangu</groupId>
             <artifactId>pangu-spring-boot-starter</artifactId>
-            <version>6.0</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -73,15 +73,9 @@
             <artifactId>nacos-config-spring-boot-starter</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.google.protobuf</groupId>
-            <artifactId>protobuf-java</artifactId>
-            <version>3.19.6</version>
-        </dependency>
-        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <scope>provided</scope>
-            <version>1.18.28</version>
         </dependency>
     </dependencies>
 
