--- a/pangu-examples/pangu-examples-crud/src/main/resources/application.yaml
+++ b/pangu-examples/pangu-examples-crud/src/main/resources/application.yaml
@@ -14,4 +14,34 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-spring.profiles.active=${spring.profiles.active:dev}
+
+server:
+  port: 8888
+
+spring:
+  profiles:
+    active: dev
+  application:
+    name: pangu-examples-crud
+  datasource:
+    type: com.zaxxer.hikari.HikariDataSource
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: url=jdbc:mysql://localhost:3306/pangu-examples?useUnicode=true&characterEncoding=utf-8&autoReconnect=true&failOverReadOnly=false&allowMultiQueries=true&useSSL=false&rewriteBatchedStatements=true
+    username: root
+    password: root
+
+mybatis-plus:
+  mapper-locations: classpath*:/mapper/**/*.xml
+  configuration:
+    log-impl: org.apache.ibatis.logging.slf4j.Slf4jImpl
+
+pangu:
+  jdbc:
+    db-type: mysql
+
+logging:
+  level:
+    root: INFO
+    com.gitee.pulanos.pangu: INFO
+  file:
+    name: logs/pangu.log
