优化 Starter 自动装配功能。

--- a/pangu-examples/pangu-examples-crud/src/main/resources/application.yaml
+++ b/pangu-examples/pangu-examples-crud/src/main/resources/application.yaml
@@ -28,16 +28,13 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/pangu-examples?useUnicode=true&characterEncoding=utf-8&autoReconnect=true&failOverReadOnly=false&allowMultiQueries=true&useSSL=false&rewriteBatchedStatements=true
     username: root
-    password: root1
+    password: root
 
 mybatis-plus:
   mapper-locations: classpath*:/mapper/**/*.xml
   configuration:
     log-impl: org.apache.ibatis.logging.slf4j.Slf4jImpl
 
-pangu:
-  jdbc:
-    db-type: mysql
 
 logging:
   level:
@@ -46,3 +43,8 @@ logging:
     com.gitee.pulanos.pangu.showcases.crud.dao: DEBUG
   file:
     name: logs/pangu.log
+
+pangu:
+  mybatis-plus:
+    db-type: mysql
+  app-id: a01
