--- a/pangu-admin/pangu-admin-backend/pangu-admin-system-api/pom.xml
+++ b/pangu-admin/pangu-admin-backend/pangu-admin-system-api/pom.xml
@@ -4,64 +4,65 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.gitee.pulanos.pangu</groupId>
+    <groupId>com.pulanit.admin</groupId>
     <artifactId>pangu-admin-system-api</artifactId>
     <packaging>jar</packaging>
-    <version>5.3.0</version>
+    <version>1.0.0</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <pangu.version>5.3.0</pangu.version>
-        <lombok.version>1.18.20</lombok.version>
-        <mybatis-plus.version>3.5.2</mybatis-plus.version>
-        <jackson-annotations.version>2.10.2</jackson-annotations.version>
-        <jakarta.validation-api.version>2.0.2</jakarta.validation-api.version>
-        <hutool-core.version>5.8.3</hutool-core.version>
-        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
     </properties>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>com.gitee.pulanos.pangu</groupId>
+                <artifactId>pangu-dependencies</artifactId>
+                <version>6.0</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
     <dependencies>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>${lombok.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>com.baomidou</groupId>
-            <artifactId>mybatis-plus-annotation</artifactId>
-            <version>${mybatis-plus.version}</version>
+            <artifactId>mybatis-plus</artifactId>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-annotations</artifactId>
-            <version>${jackson-annotations.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>jakarta.validation</groupId>
             <artifactId>jakarta.validation-api</artifactId>
-            <version>${jakarta.validation-api.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>cn.hutool</groupId>
-            <artifactId>hutool-core</artifactId>
-            <version>${hutool-core.version}</version>
+            <artifactId>hutool-all</artifactId>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>com.gitee.pulanos.pangu</groupId>
-            <artifactId>pangu-common</artifactId>
-            <version>${pangu.version}</version>
+            <artifactId>pangu-spring-boot-starter</artifactId>
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>com.gitee.pulanos.pangu</groupId>
+            <groupId>com.pulanit.admin</groupId>
             <artifactId>pangu-admin-common</artifactId>
-            <version>${project.version}</version>
+            <version>1.0.0</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
@@ -71,11 +72,6 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>${maven-compiler-plugin.version}</version>
-                <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                </configuration>
             </plugin>
         </plugins>
     </build>
