--- a/pangu-admin/pangu-admin-backend/pangu-admin-web/pom.xml
+++ b/pangu-admin/pangu-admin-backend/pangu-admin-web/pom.xml
@@ -11,7 +11,7 @@
         <relativePath/>
     </parent>
 
-    <groupId>com.gitee.pulanos.pangu</groupId>
+    <groupId>com.pulanit.admin</groupId>
     <artifactId>pangu-admin-web</artifactId>
     <packaging>jar</packaging>
     <version>5.3.0</version>
