--- a/pangu-dependencies/pom.xml
+++ b/pangu-dependencies/pom.xml
@@ -52,7 +52,7 @@
         <fastjson2.version>2.0.41</fastjson2.version>
         <hutool-all.version>5.8.22</hutool-all.version>
         <lombok.version>1.18.20</lombok.version>
-        <logback-classic.version>1.3.5</logback-classic.version>
+        <logback-classic.version>1.2.9</logback-classic.version>
         <maven-plugin.version>3.8.2</maven-plugin.version>
     </properties>
 
@@ -99,6 +99,11 @@
             <dependency>
                 <groupId>com.baomidou</groupId>
                 <artifactId>mybatis-plus-boot-starter</artifactId>
+                <version>${mybatis-plus.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.baomidou</groupId>
+                <artifactId>mybatis-plus</artifactId>
                 <version>${mybatis-plus.version}</version>
             </dependency>
             <dependency>
