--- a/pangu-admin/pangu-admin-backend/pangu-admin-system/pom.xml
+++ b/pangu-admin/pangu-admin-backend/pangu-admin-system/pom.xml
@@ -4,17 +4,43 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <parent>
-        <groupId>com.gitee.pulanos.pangu</groupId>
-        <artifactId>pangu-parent</artifactId>
-        <version>5.3.0</version>
-        <relativePath/>
-    </parent>
-
-    <groupId>com.gitee.pulanos.pangu</groupId>
+    <groupId>com.pulanit.admin</groupId>
     <artifactId>pangu-admin-system</artifactId>
     <packaging>jar</packaging>
-    <version>5.3.0</version>
+    <version>1.0.0</version>
+
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.7.17</version>
+        <relativePath />
+    </parent>
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
+    </properties>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-dependencies</artifactId>
+                <version>${project.parent.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>com.gitee.pulanos.pangu</groupId>
+                <artifactId>pangu-dependencies</artifactId>
+                <version>6.0</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
     <dependencies>
         <dependency>
@@ -22,24 +48,16 @@
             <artifactId>pangu-spring-boot-starter</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.gitee.pulanos.pangu</groupId>
-            <artifactId>pangu-dubbo-spring-boot-starter</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.gitee.pulanos.pangu</groupId>
-            <artifactId>pangu-jdbc-spring-boot-starter</artifactId>
-        </dependency>
-        <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.gitee.pulanos.pangu</groupId>
+            <groupId>com.pulanit.admin</groupId>
             <artifactId>pangu-admin-system-api</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.gitee.pulanos.pangu</groupId>
+            <groupId>com.pulanit.admin</groupId>
             <artifactId>pangu-admin-common</artifactId>
             <version>${project.version}</version>
         </dependency>
@@ -54,16 +72,10 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>${maven-compiler-plugin.version}</version>
-                <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                </configuration>
             </plugin>
             <plugin>
                 <groupId>com.gitee.pulanos.pangu</groupId>
                 <artifactId>pangu-generator-maven-plugin</artifactId>
-                <version>${project.parent.version}</version>
                 <configuration>
                     <url>jdbc:mysql://127.0.0.1:3306/pangu-admin</url>
                     <user>root</user>
