--- a/pangu-dependencies/pom.xml
+++ b/pangu-dependencies/pom.xml
@@ -51,6 +51,7 @@
         <commons-lang3.version>3.12.0</commons-lang3.version>
         <fastjson2.version>2.0.41</fastjson2.version>
         <hutool-all.version>5.8.22</hutool-all.version>
+        <protobuf-java.version>3.19.6</protobuf-java.version>
         <lombok.version>1.18.20</lombok.version>
         <logback-classic.version>1.2.9</logback-classic.version>
         <maven-plugin.version>3.8.2</maven-plugin.version>
@@ -170,6 +171,11 @@
                 <groupId>cn.hutool</groupId>
                 <artifactId>hutool-all</artifactId>
                 <version>${hutool-all.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.google.protobuf</groupId>
+                <artifactId>protobuf-java</artifactId>
+                <version>${protobuf-java.version}</version>
             </dependency>
             <dependency>
                 <groupId>ch.qos.logback</groupId>
