--- a/pangu-examples/pangu-examples-shardingsphere-sharding/src/main/resources/application.properties
+++ b/pangu-examples/pangu-examples-shardingsphere-sharding/src/main/resources/application.properties
@@ -14,7 +14,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-#spring.profiles.active=${spring.profiles.active:dev}
+#spring.profiles.active=${spring.active:dev}
 
 # only sharding tables
 #spring.profiles.active=sharding-tables
