--- a/pangu-examples/pangu-examples-dubbo-triple/pangu-examples-dubbo-triple-provider/src/main/resources/application.yaml
+++ b/pangu-examples/pangu-examples-dubbo-triple/pangu-examples-dubbo-triple-provider/src/main/resources/application.yaml
@@ -2,7 +2,7 @@ spring:
   application:
     name: pangu-examples-dubbo-triple-provider
   profiles:
-    active: ${spring.profiles.active:dev}
+    active: ${spring.active:dev}
 nacos:
   config:
     namespace: ${nacos.namespace:dev}
