--- a/pangu-examples/pangu-examples-lock-redis-based/src/main/resources/application.properties
+++ b/pangu-examples/pangu-examples-lock-redis-based/src/main/resources/application.properties
@@ -14,4 +14,4 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-spring.profiles.active=${spring.profiles.active:dev}
+spring.profiles.active=${spring.active:dev}
