调整了依赖管理

--- a/pangu-admin/pangu-admin-backend/pangu-admin-system/pom.xml
+++ b/pangu-admin/pangu-admin-backend/pangu-admin-system/pom.xml
@@ -72,6 +72,10 @@
             <artifactId>dubbo-registry-nacos</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.google.protobuf</groupId>
+            <artifactId>protobuf-java</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.pulanit.admin</groupId>
             <artifactId>pangu-admin-system-api</artifactId>
             <version>${project.version}</version>
