--- a/pangu-admin/pangu-admin-backend/pangu-admin-web/pom.xml
+++ b/pangu-admin/pangu-admin-backend/pangu-admin-web/pom.xml
@@ -68,6 +68,10 @@
             <artifactId>dubbo-registry-nacos</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.google.protobuf</groupId>
+            <artifactId>protobuf-java</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.aspectj</groupId>
             <artifactId>aspectjweaver</artifactId>
         </dependency>
